Added Model Project, Automatic migrations

--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -19,4 +19,8 @@
     <Content Update="nlog.config" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Model\Model.csproj" />
+  </ItemGroup>
+
 </Project>
