Folder structure changed. DAL(Data Access Layer) and BLL(Business Logic Layer) added.

--- a/WebApi.DAL/WebApi.DAL.csproj
+++ b/WebApi.DAL/WebApi.DAL.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebApi.Model\WebApi.Model.csproj" />
+  </ItemGroup>
+
 </Project>
