--- a/WebApi.BLL/WebApi.BLL.csproj
+++ b/WebApi.BLL/WebApi.BLL.csproj
@@ -5,7 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.1" />
+  </ItemGroup>
+
+
+  <ItemGroup>
       <ProjectReference Include="..\WebApi.Model\WebApi.Model.csproj" />
       <ProjectReference Include="..\WebApi.DAL\WebApi.DAL.csproj" />
-    </ItemGroup>
+  </ItemGroup>
+
+  
 </Project>
