--- a/WebApi/appsettings.json.example
+++ b/WebApi/appsettings.json.example
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-NE3COAA\\SQLEXPRESS;Database=testdb;Trusted_Connection=True;"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
